# docker-dashboard

./: .gitignore  Cargo.toml
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: .env  Cargo.toml  Dioxus.toml  README.md  build.rs
frontend/assets/: main.css
frontend/assets/styling/: containers.css
frontend/src/: main.rs
src/: main.rs
