[package]
name = "backend"
version = "0.1.0"
authors = ["bin.han <bin.han@funplus.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "*"
actix-web = "4"
serde = { version = "1.0.217", features = ["derive"] }
actix-cors = "0.7.0"
lazy_static = "1.4.0"
